[package]
name = "lightning-node-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
lightning = "0.0.113"
lightning-net-tokio = "0.0.113"
bitcoin = "0.29.2"
rand = "0.8.5"
futures = "0.3.25"
